# greeting_db_api

./: Cargo.toml  compose.yaml
migrations/: 1_initial-tables.sql  2_generate_log.sql
src/: greeting_command.rs  greeting_pg_trace.rs  greeting_query.rs  lib.rs
