[package]
name = "greeting_db_api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros", "uuid"] }
async-trait = "0.1.81"
serde_json = "1.0.140"
serde = "1.0.219"
uuid = "1.17.0"

chrono = { version = "0.4.41", features = ["serde"] }
error = "0.1.9"
log = "0.4.27"
#serde_json = "1.0.85"
#serde = { version = "1.0.204", features = ["derive"] }
#uuid = { version = "1.3.1", features = ["v7"]}