[package]
name = "greeting_db_api"
version = "0.2.1"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros", "uuid"] }
async-trait = "0.1.81"
serde = "1.0.219"
uuid = "1.17.0"
derive_more = { version = "2.0.1", features = ["display"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
